# OpenRCT2-ObjectCommon

./: .gitignore  .yamllint.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  pytest.yml
openrct2_object_common/: __init__.py  cli.py  colours.py  config.py  dispatch.py  export.py  identity.py  loading.py  objectjson.py  parkobj.py  placement.py  preview.py  sprite_render.py  testing.py
openrct2_object_common/blender/: __init__.py  bake.py  collection_ops.py  lights.py  lights_ui.py  mesh_extract.py  modal.py  object_panel.py  progress_overlay.py  props.py  registration.py
scripts/ci/: set_version.py
tests/: conftest.py  test_blender.py  test_blender_shared.py  test_cli.py  test_config.py  test_dispatch.py  test_export.py  test_loading.py  test_objectjson.py  test_parkobj.py  test_placement.py  test_preview.py  test_sprite_render.py
