[project]
name = "OpenRCT2-ObjectCommon"
version = "0.2.1"
description = "Shared config, CLI, .parkobj, and object.json scaffolding for OpenRCT2 object generators."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Alex Parisi", email = "alex@atparisi.com" }
]
dependencies = [
    "openrct2-x7-renderer>=0.3.6",
    "numpy>=1.26",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/alex-parisi/OpenRCT2-ObjectCommon"
Repository = "https://github.com/alex-parisi/OpenRCT2-ObjectCommon"

# The Blender helpers (openrct2_object_common.blender, except .lights) import
# bpy; the rest of the package does not. Only the add-ons need this extra.
[project.optional-dependencies]
blender = ["bpy>=4.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "ruff>=0.5",
    "yamllint>=1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=openrct2_object_common"

[tool.coverage.run]
source = ["openrct2_object_common"]
omit = ["openrct2_object_common/testing.py"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["openrct2_object_common", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N"]

[tool.ruff.lint.per-file-ignores]
# The Blender helpers follow bpy's mandated operator/PropertyGroup class names
# (`VG_OT_name`, etc.) and bpy var names, which trip pep8-naming. They can't be
# renamed without breaking add-on registration in the consuming repos.
"openrct2_object_common/blender/*" = ["N801", "N802", "N806"]

[tool.mypy]
python_version = "3.11"
files = ["openrct2_object_common"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
# The Blender helpers depend on bpy (only present inside Blender), so they're
# type-checked in the consuming add-on repos, not here.
exclude = ["openrct2_object_common/blender/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openrct2_object_common"]
